feat(api): implement `items` router proto
