# docs/api/v1/api.yaml
@@ -16,10 +16,25 @@ servers:
           - "v1"
         default: "v1"
 tags:
+  - name: Items
+    description: Items route
   - name: Specification
     description: The swagger API specification
 
 paths:
+  /items:
+    get:
+      tags:
+        - Items
+      responses:
+        200:
+          description: List of *SKINPORT* items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Item"
   /spec:
     get:
       tags:
@@ -32,6 +47,31 @@ paths:
           content: {}
 components:
   schemas:
+    Item:
+      type: object
+      properties:
+        market_hash_name:
+          type: string
+        currency:
+          type: string
+        suggested_price:
+          type: number
+        item_page:
+          type: string
+        market_page:
+          type: string
+        min_price:
+          type: number
+        max_price:
+          type: number
+        mean_price:
+          type: number
+        quantity:
+          type: number
+        created_at:
+          type: number
+        updated_at:
+          type: number
     Error:
       type: object
       required:
