# src/services/items/item.type.ts
@@ -1,0 +1,13 @@
+export interface Item {
+    market_hash_name: string;
+    currency: string;
+    suggested_price: number;
+    item_page: string;
+    market_page: string;
+    min_price: number;
+    max_price: number;
+    mean_price: number;
+    quantity: number;
+    created_at: number;
+    updated_at: number;
+}
